      on 0.1.2.x.
    - We were ignoring our RelayBandwidthRate for the first 30 seconds
      after opening a circuit -- even relayed circuits. Bugfix on
      0.2.0.3-alpha.
    - Stop thinking that 0.1.2.x directory servers can handle "begin_dir"
      requests. Should ease bugs 406 and 419 where 0.1.2.x relays are
      crashing or mis-answering these requests.

  o Minor bugfixes:
    - The fix in 0.2.0.12-alpha cleared the "hsdir" flag in v3 network
      consensus documents when there are too many relays at a single
      IP address. Now clear it in v2 network status documents too.
    - Don't crash if we get an unexpected value for the
      PublishServerDescriptor config option. Reported by Matt Edman;
      bugfix on 0.2.0.9-alpha.
    - Our new v2 hidden service descriptor format allows descriptors
      that have no introduction points. But Tor crashed when we tried
      to build a descriptor with no intro points (and it would have
      crashed if we had tried to parse one). Bugfix on 0.2.0.x; patch
      by Karsten Loesing.
    - Fix building with dmalloc 5.5.2 with glibc.
    - Reject uploaded descriptors and extrainfo documents if they're
      huge. Otherwise we'll cache them all over the network and it'll
      clog everything up. Reported by Aljosha Judmayer.

  o Minor features:
    - On USR1, when dmalloc is in use, log the top 10 memory
      consumers. (We already do this on HUP.)
    - Authorities and caches fetch the v2 networkstatus documents
      less often, now that v3 is encouraged.

  o Code simplifications:
    - 


Changes in version 0.2.0.12-alpha - 2007-11-16
  This twelfth development snapshot fixes some more build problems as
  well as a few minor bugs.

  o Compile fixes:
    - Make it build on OpenBSD again. Patch from tup.
    - Substitute BINDIR and LOCALSTATEDIR in scripts. Fixes
      package-building for Red Hat, OS X, etc.

  o Minor bugfixes (on 0.1.2.x):